--- a/TP3 - Processamento de consultas.ipynb
+++ b/TP3 - Processamento de consultas.ipynb
@@ -58,20 +58,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{1, 2, 3, 4}"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "{1,2,3}|{2,4}"
    ]
@@ -124,9 +113,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.079630145249538\n",
+      "0.34218112724994865\n",
+      "0.34218112724994865\n",
+      "0.34218112724994865\n",
+      "0.34218112724994865\n",
+      "0.34218112724994865\n",
+      "2.5121061286922615\n",
+      "2.5121061286922615\n",
+      "2.5121061286922615\n",
+      "{1: 1.9401011313200751, 2: 1.7878669925898176, 3: 2.3165477298416435}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.021s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "!python3 -m query.tests.ranking_models RankingModelTest.test_precomputed_vals"
    ]
@@ -382,7 +399,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9.9 64-bit (windows store)",
    "language": "python",
    "name": "python3"
   },
@@ -396,7 +413,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.9"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "ba76eceb568c00ecaded1fb3a121ff8a78fda47068db7d663d29d676572fc397"
+   }
   }
  },
  "nbformat": 4,
