--- a/TP3 - Processamento de consultas.ipynb
+++ b/TP3 - Processamento de consultas.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,9 +58,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1, 2, 3, 4}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "{1,2,3}|{2,4}"
    ]
@@ -81,9 +92,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{2, 4}\n",
+      "{2, 4}\n",
+      "{1, 2}\n",
+      "{1}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.001s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "!python3 -m query.tests.ranking_models RankingModelTest.test_boolean_model"
    ]
@@ -97,10 +130,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.321928094887362 1.0 3.321928094887362\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "from query.ranking_models import VectorRankingModel\n",
+    "tf = VectorRankingModel.tf(5)\n",
+    "idf = VectorRankingModel.idf(2, 1)\n",
+    "tf_idf = VectorRankingModel.tf_idf(2, 5, 1)\n",
+    "\n",
+    "print(tf, idf, tf_idf)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -113,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +187,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.021s\n",
+      "Ran 1 test in 0.090s\n",
       "\n",
       "OK\n"
      ]
@@ -159,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,9 +244,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.011s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "!python3 -m query.tests.ranking_models RankingModelTest.test_vector_model"
    ]
@@ -277,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,9 +378,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Program Files\\WindowsApps\\PythonSoftwareFoundation.Python.3.9_3.9.2544.0_x64__qbz5n2kfra8p0\\lib\\runpy.py\", line 197, in _run_module_as_main\n",
+      "    return _run_code(code, main_globals, None,\n",
+      "  File \"C:\\Program Files\\WindowsApps\\PythonSoftwareFoundation.Python.3.9_3.9.2544.0_x64__qbz5n2kfra8p0\\lib\\runpy.py\", line 87, in _run_code\n",
+      "    exec(code, run_globals)\n",
+      "  File \"c:\\Users\\savio\\Documents\\ri-processer\\query\\tests\\processing.py\", line 2, in <module>\n",
+      "    from query.processing import QueryRunner, VectorRankingModel, IndexPreComputedVals\n",
+      "  File \"c:\\Users\\savio\\Documents\\ri-processer\\query\\processing.py\", line 45\n",
+      "    def get_query_term_occurence(self, query:str) -> Mapping[str,TermOccurrence]:\n",
+      "                                                                                 ^\n",
+      "IndentationError: unindent does not match any outer indentation level\n"
+     ]
+    }
+   ],
    "source": [
     "!python3 -m query.tests.processing ProcessingTest.test_count_top_n_relevant"
    ]
@@ -326,9 +412,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Program Files\\WindowsApps\\PythonSoftwareFoundation.Python.3.9_3.9.2544.0_x64__qbz5n2kfra8p0\\lib\\runpy.py\", line 197, in _run_module_as_main\n",
+      "    return _run_code(code, main_globals, None,\n",
+      "  File \"C:\\Program Files\\WindowsApps\\PythonSoftwareFoundation.Python.3.9_3.9.2544.0_x64__qbz5n2kfra8p0\\lib\\runpy.py\", line 87, in _run_code\n",
+      "    exec(code, run_globals)\n",
+      "  File \"c:\\Users\\savio\\Documents\\ri-processer\\query\\tests\\processing.py\", line 2, in <module>\n",
+      "    from query.processing import QueryRunner, VectorRankingModel, IndexPreComputedVals\n",
+      "  File \"c:\\Users\\savio\\Documents\\ri-processer\\query\\processing.py\", line 45\n",
+      "    def get_query_term_occurence(self, query:str) -> Mapping[str,TermOccurrence]:\n",
+      "                                                                                 ^\n",
+      "IndentationError: unindent does not match any outer indentation level\n"
+     ]
+    }
+   ],
    "source": [
     "!python3 -m query.tests.processing ProcessingTest.test_get_query_term_occurence"
    ]
@@ -342,9 +446,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "^C\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Program Files\\WindowsApps\\PythonSoftwareFoundation.Python.3.9_3.9.2544.0_x64__qbz5n2kfra8p0\\lib\\runpy.py\", line 197, in _run_module_as_main\n",
+      "    return _run_code(code, main_globals, None,\n",
+      "  File \"C:\\Program Files\\WindowsApps\\PythonSoftwareFoundation.Python.3.9_3.9.2544.0_x64__qbz5n2kfra8p0\\lib\\runpy.py\", line 87, in _run_code\n",
+      "    exec(code, run_globals)\n",
+      "  File \"c:\\Users\\savio\\Documents\\ri-processer\\query\\tests\\processing.py\", line 2, in <module>\n",
+      "    from query.processing import QueryRunner, VectorRankingModel, IndexPreComputedVals\n",
+      "  File \"c:\\Users\\savio\\Documents\\ri-processer\\query\\processing.py\", line 45\n",
+      "    def get_query_term_occurence(self, query:str) -> Mapping[str,TermOccurrence]:\n",
+      "                                                                                 ^\n",
+      "IndentationError: unindent does not match any outer indentation level\n"
+     ]
+    }
+   ],
    "source": [
     "!python3 -m query.tests.processing ProcessingTest.test_get_occurence_list_per_term"
    ]
