--- a/TP3 - Processamento de consultas.ipynb
+++ b/TP3 - Processamento de consultas.ipynb
@@ -1069,7 +1069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1084,20 +1084,18 @@
       "2.5121061286922615\n",
       "2.5121061286922615\n",
       "22.608955158230355\n",
-      "{1: 5.012091508235121, 2: 2.1905640992951927, 3: 2.806866493677021}\n",
-      "F\n",
-      "======================================================================\n",
-      "FAIL: test_count_top_n_relevant (__main__.ProcessingTest)\n",
+      "{1: 5.012091508235121, 2: 2.1905640992951927, 3: 2.806866493677021}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".\n",
       "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/luccasilva/dev/ri-processer/query/tests/processing.py\", line 40, in test_count_top_n_relevant\n",
-      "    self.assertEqual(resp_esperada, resposta, msg=f\"# de relevantes esperadas top {n}: {resp_esperada} resposta obtida: {resposta}\")\n",
-      "AssertionError: 1 != 5 : # de relevantes esperadas top 1: 1 resposta obtida: 5\n",
+      "Ran 1 test in 0.019s\n",
       "\n",
-      "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.016s\n",
-      "\n",
-      "FAILED (failures=1)\n"
+      "OK\n"
      ]
     }
    ],
@@ -1114,24 +1112,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.5121061286922615\n",
+      "2.2864649444286966\n",
+      "0.34218112724994865\n",
+      "2.5121061286922615\n",
+      "2.5121061286922615\n",
+      "2.5121061286922615\n",
+      "2.5121061286922615\n",
+      "22.608955158230355\n",
+      "{1: 5.012091508235121, 2: 2.1905640992951927, 3: 2.806866493677021}\n",
+      "Consulta: crocodilo\n",
+      "Resposta do método: {}\n",
+      "\n",
+      "Consulta: vocês\n",
+      "Resposta do método: {'vocês': ( doc: None term_id:1 freq: 1)}\n",
+      "\n",
+      "Consulta: Vocês estejam\n",
+      "Resposta do método: {'vocês': ( doc: None term_id:1 freq: 1), 'estejam': ( doc: None term_id:4 freq: 1)}\n",
+      "\n",
+      "Consulta: vocês vocês crocodilo\n",
+      "Resposta do método: {'vocês': ( doc: None term_id:1 freq: 2)}\n",
+      "\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Traceback (most recent call last):\n",
-      "  File \"C:\\Program Files\\WindowsApps\\PythonSoftwareFoundation.Python.3.9_3.9.2544.0_x64__qbz5n2kfra8p0\\lib\\runpy.py\", line 197, in _run_module_as_main\n",
-      "    return _run_code(code, main_globals, None,\n",
-      "  File \"C:\\Program Files\\WindowsApps\\PythonSoftwareFoundation.Python.3.9_3.9.2544.0_x64__qbz5n2kfra8p0\\lib\\runpy.py\", line 87, in _run_code\n",
-      "    exec(code, run_globals)\n",
-      "  File \"c:\\Users\\savio\\Documents\\ri-processer\\query\\tests\\processing.py\", line 2, in <module>\n",
-      "    from query.processing import QueryRunner, VectorRankingModel, IndexPreComputedVals\n",
-      "  File \"c:\\Users\\savio\\Documents\\ri-processer\\query\\processing.py\", line 45\n",
-      "    def get_query_term_occurence(self, query:str) -> Mapping[str,TermOccurrence]:\n",
-      "                                                                                 ^\n",
-      "IndentationError: unindent does not match any outer indentation level\n"
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.021s\n",
+      "\n",
+      "OK\n"
      ]
     }
    ],
@@ -1148,31 +1167,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "^C\n"
+      "2.5121061286922615\n",
+      "2.2864649444286966\n",
+      "0.34218112724994865\n",
+      "2.5121061286922615\n",
+      "2.5121061286922615\n",
+      "2.5121061286922615\n",
+      "2.5121061286922615\n",
+      "22.608955158230355\n",
+      "{1: 5.012091508235121, 2: 2.1905640992951927, 3: 2.806866493677021}\n",
+      "dic\n",
+      "{'crocodilo': []}\n",
+      "Termos: ['crocodilo']\n",
+      "Resposta do método: {'crocodilo': []}\n",
+      "\n",
+      "dic\n",
+      "{'vocês': [( doc: 2 term_id:1 freq: 3), ( doc: 3 term_id:1 freq: 1)], 'estejam': [( doc: 3 term_id:4 freq: 1)], 'crocodilo': []}\n",
+      "Termos: ['vocês', 'estejam', 'crocodilo']\n",
+      "Resposta do método: {'vocês': [( doc: 2 term_id:1 freq: 3), ( doc: 3 term_id:1 freq: 1)], 'estejam': [( doc: 3 term_id:4 freq: 1)], 'crocodilo': []}\n",
+      "in test\n",
+      "( doc: 2 term_id:1 freq: 3)\n",
+      "in test\n",
+      "( doc: 3 term_id:1 freq: 1)\n",
+      "in test\n",
+      "( doc: 2 term_id:1 freq: 3)\n",
+      "in test\n",
+      "( doc: 3 term_id:1 freq: 1)\n",
+      "in test\n",
+      "( doc: 3 term_id:4 freq: 1)\n",
+      "\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Traceback (most recent call last):\n",
-      "  File \"C:\\Program Files\\WindowsApps\\PythonSoftwareFoundation.Python.3.9_3.9.2544.0_x64__qbz5n2kfra8p0\\lib\\runpy.py\", line 197, in _run_module_as_main\n",
-      "    return _run_code(code, main_globals, None,\n",
-      "  File \"C:\\Program Files\\WindowsApps\\PythonSoftwareFoundation.Python.3.9_3.9.2544.0_x64__qbz5n2kfra8p0\\lib\\runpy.py\", line 87, in _run_code\n",
-      "    exec(code, run_globals)\n",
-      "  File \"c:\\Users\\savio\\Documents\\ri-processer\\query\\tests\\processing.py\", line 2, in <module>\n",
-      "    from query.processing import QueryRunner, VectorRankingModel, IndexPreComputedVals\n",
-      "  File \"c:\\Users\\savio\\Documents\\ri-processer\\query\\processing.py\", line 45\n",
-      "    def get_query_term_occurence(self, query:str) -> Mapping[str,TermOccurrence]:\n",
-      "                                                                                 ^\n",
-      "IndentationError: unindent does not match any outer indentation level\n"
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.048s\n",
+      "\n",
+      "OK\n"
      ]
     }
    ],
@@ -1189,9 +1230,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.5121061286922615\n",
+      "2.2864649444286966\n",
+      "0.34218112724994865\n",
+      "2.5121061286922615\n",
+      "2.5121061286922615\n",
+      "2.5121061286922615\n",
+      "2.5121061286922615\n",
+      "22.608955158230355\n",
+      "{1: 5.012091508235121, 2: 2.1905640992951927, 3: 2.806866493677021}\n",
+      "Pesos dos documento da consulta 'crocodilo': {}\n",
+      "\n",
+      "Pesos dos documento da consulta 'vocês': {2: 0.40378886090583005, 3: 0.12190858668225728}\n",
+      "\n",
+      "Pesos dos documento da consulta 'Vocês estejam': {2: 0.40378886090583005, 3: 1.0168945556805116}\n",
+      "\n",
+      "Pesos dos documento da consulta 'vocês vocês crocodilo': {2: 0.8075777218116601, 3: 0.24381717336451456}\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.030s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "!python3 -m query.tests.processing ProcessingTest.test_get_docs_term"
    ]
